correção do psr-4 para o composer

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Lamarques\\": "src/",
-            "tests": "tests/"
+            "Lamarques\\": "src/"
         }
     }
 }
