--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "lamarques/getnet",
     "description": "Gateway de pagamentos com a getnet",
-    "type": "project",
+    "type": "library",
     "require-dev": {
         "phpunit/phpunit": "^7.0"
     },
